improves code quality

--- a/pabre-ws/src/main/webapp/gessi/index.html
+++ b/pabre-ws/src/main/webapp/gessi/index.html
@@ -107,7 +107,7 @@
 						</td>
 						<td style="width: 540px;"><br /></td>
 						<td><img src="Patterns_files/images/logosGESSIandHT.png"
-							align="right" height="90" width="246" /></td>
+							align="right" height="90" width="246"  alt="Gessi"/></td>
 					</tr>
 				</tbody>
 			</table>
@@ -127,31 +127,31 @@
 		</div>
 		<div id="content">
 			<div id="selectedPatternInfo">
-				<iframe name="patternShower" src="Patterns_files/PatternsPresentation.htm"
+				<iframe title="Patterns Presentation" name="patternShower" src="Patterns_files/PatternsPresentation.htm"
 					target="_self" frameborder="1" height="505" scrolling="auto" width="660">Your
 				web broser do not support this kind of frames</iframe>
 				<table id="patternInfoTemplate" class="template" width="660" border="1">
 					<tbody>
 						<tr>
-							<td rowspan="7"><b>Requirement <br /> Pattern <br />
-							</b><i id="pt_name">####</i></td>
-							<td><b>Description</b></td>
+							<td rowspan="7"><strong>Requirement <br /> Pattern <br />
+							</strong><em id="pt_name">####</em></td>
+							<td><strong>Description</strong></td>
 							<td colspan="2" id="pt_description">####</td>
 						</tr>
 						<tr>
-							<td><b>Comments</b></td>
+							<td><strong>Comments</strong></td>
 							<td colspan="2" id="pt_comments">####</td>
 						</tr>
 						<tr>
-							<td><b>Pattern goal</b></td>
+							<td><strong>Pattern goal</strong></td>
 							<td colspan="2" id="pt_goal">####</td>
 						</tr>
 						<tr>
-							<td><b>Author</b></td>
+							<td><strong>Author</strong></td>
 							<td colspan="2" id="pt_author">####</td>
 						</tr>
 						<tr>
-							<td><b>Sources (0..*)</b></td>
+							<td><strong>Sources (0..*)</strong></td>
 							<td colspan="2">
 								<ul id="pt_sources">
 									<li>####</li>
@@ -159,25 +159,25 @@
 							</td>
 						</tr>
 						<tr>
-							<td><b>Keywords (0..*)</b></td>
+							<td><strong>Keywords (0..*)</strong></td>
 							<td colspan="2" id="pt_keywords">####</td>
 						</tr>
 						<tr>
-							<td><b>Dependencies (0..*)</b></td>
+							<td><strong>Dependencies (0..*)</strong></td>
 							<td colspan="2" id="pt_dependencies">####</td>
 						</tr>
 					</tbody>
 				</table>
 				<table id="patternFormTemplate" class="template">
 					<tr class="pt_form">
-						<td class="pt_requirementForm" rowspan="6"><b>Requirement <br />
+						<td class="pt_requirementForm" rowspan="6"><strong>Requirement <br />
 								Form <br />
-						</b><i class="pt_formName">####</i></td>
-						<td><b>Description</b></td>
+						</strong><em class="pt_formName">####</em></td>
+						<td><strong>Description</strong></td>
 						<td colspan="2" class="pt_formDescription">####</td>
 					</tr>
 					<tr>
-						<td><b>Comments</b></td>
+						<td><strong>Comments</strong></td>
 						<td colspan="2" class="pt_formComments">####</td>
 					</tr>
 					<!--
@@ -186,29 +186,29 @@
 					</tr>
 					 -->
 					<tr>
-						<td><b>Author</b></td>
+						<td><strong>Author</strong></td>
 						<td colspan="2" class="pt_formAuthor">####</td>
 					</tr>
 					<tr>
-						<td><b>Sources (0..*)</b></td>
+						<td><strong>Sources (0..*)</strong></td>
 						<td colspan="2"><ul class="pt_formSources">
 								<li>####</li>
 							</ul></td>
 					</tr>
 					<tr>
-						<td class="pt_fixedPart" rowspan="2"><b>Fixed Part</b></td>
-						<td><b>Question text</b></td>
+						<td class="pt_fixedPart" rowspan="2"><strong>Fixed Part</strong></td>
+						<td><strong>Question text</strong></td>
 						<td class="pt_formQuestionText">####</td>
 					</tr>
 					<tr>
-						<td><b>Form text</b></td>
+						<td><strong>Form text</strong></td>
 						<td class="pt_formFormText">####</td>
 					</tr>
 				</table>
 				<table id="parameterTemplate" class="template">
 					<tr class="pt_formParameterHeaders">
-						<td align="center"><b>Parameter</b></td>
-						<td align="center"><b>Metric</b></td>
+						<td align="center"><strong>Parameter</strong></td>
+						<td align="center"><strong>Metric</strong></td>
 					</tr>
 					<tr class="pt_formParameter">
 						<td class="pt_formParameterName">data: is a non-empty set of data
@@ -221,11 +221,11 @@
 				<table class="pt_extendedPartTemplate template">
 					<tr>
 						<td class="pt_extendedPart" rowspan="2"><b>Extended Part</b></td>
-						<td><b>Question text</b></td>
+						<td><strong>Question text</strong></td>
 						<td class="pt_formQuestionText">####</td>
 					</tr>
 					<tr>
-						<td><b>Form text</b></td>
+						<td><strong>Form text</strong></td>
 						<td class="pt_formFormText">####</td>
 					</tr>
 				</table>
