improves code quality

--- a/pabre-ws/src/main/webapp/gessi/index.html
+++ b/pabre-ws/src/main/webapp/gessi/index.html
@@ -220,7 +220,7 @@
 				</table>
 				<table class="pt_extendedPartTemplate template">
 					<tr>
-						<td class="pt_extendedPart" rowspan="2"><b>Extended Part</b></td>
+						<td class="pt_extendedPart" rowspan="2"><strong>Extended Part</strong></td>
 						<td><strong>Question text</strong></td>
 						<td class="pt_formQuestionText">####</td>
 					</tr>
